# .vscode

./: .clang-format  .gitignore  CMakeLists.txt  README.md  c_cpp_properties.json  launch.json  main.cpp  mingw-windows.cmake  osx.cmake  settings.json  tasks.json  windows.cmake
tasks/: Build.sh  Clean.sh  ConfigureCMake.sh  CountLines.sh  Format.sh  FormatAll.sh  ViewAssembly.sh
